--- a/code/RTutorial_WithinSubjects.Rmd
+++ b/code/RTutorial_WithinSubjects.Rmd
@@ -204,6 +204,13 @@ ggplot(means_and_errors, aes(x=rt_mean_0, y=rt_mean_50)) +
 
 __Úloha__. Nepotrebovali sme niè modelova», ale ako by ste z tejto situácie dostali kompaktný záver o predå¾ení reakènej doby? (Skúste prelo¾i» bodmi priamku.)
 
+```{r}
+fit_rt <- lm(mean_rt_50deg ~ mean_rt_0deg,, data = subject_means_wide)
+summary(fit_rt)
+plot(fit_rt)
+```
+
+
 
 ## Literatúra:
 
