--- a/slides/RTutorial_R.tex
+++ b/slides/RTutorial_R.tex
@@ -7,7 +7,7 @@
 			\item[Excel] a iné tabuľkové programy
 			\item[SPSS] Statisticu, Minitab a iné komerčné programy poskytujúce analýzu na kľúč
 		\end{description}
-		\alert{Tak prečo mám používať niečo, čo sa treba určitý čas učiť?}
+		\alert{Tak prečo mám používať niečo, čo sa treba určitý čas (=dlho) učiť?}
 	\end{block}
 \end{frame}
 
@@ -18,7 +18,7 @@
 			\item Ale nie je dobrý na výmenu dát (polo-proprietárny formát - nikdy nevieme, kedy sa zmení)
 			\item Vzorce v bunkách sa ťažko spravujú a neexistuje praktický spôsob, ako nezávisle dokumentovať, čo sa ako počíta.
 			\item Nemáme výstrahu, ak náhodne zmeníme obsah bunky
-			\item Nástroje pre štatistiku sú implementované ledabylo.
+			\item Nástroje pre štatistiku sú implementované ledabolo.
 			\item Grafy sú na zaplakanie.
 		\end{itemize}
 	\end{block}
@@ -48,7 +48,7 @@
 			\item R je interpretovaný programovací jazyk
 			\item R podporuje integráciu s inými programovacími jazykmi - môžeme volať funkcie naprogramované v C++, Fortrane ap., čo podstatne kompenzuje pomalosť vlastného interpreta R.
 			\item R spolupracuje s Pythonom, Javou a ďalšími jazykmi, ktoré používajú vývojári v data science
-			\item R má výborné IDE, RStudio, a najnovšie aj Visual Studio!
+			\item R má výborné IDE, RStudio, a najnovšie aj Visual Studio (\alert{zakazujem používať VS} - vyhnete sa škaredým problémom, ak to nebudete skúšať.)
 		\end{itemize}
 	\end{block}
 	\begin{block}{R má bohaté rozhrania pre dáta}
@@ -71,7 +71,7 @@
 	\begin{block}{R je rozšíriteľné}
 		\begin{itemize}
 			\item To, čo robí R skutočne cenným, je ekosystém rozšírení - baličkov (packages)
-			\item Tieto baličky obsahujú všetky štatistické metódy, ktoré kedy budete potrebovať
+			\item Tieto baličky obsahujú všetky štatistické metódy, ktoré kedy budete potrebovať (dobre, skôr väčšinu \dots)
 			\item Balíčky sídlia na serveri CRAN, a môžete si ich ľahko doinštalovať cez interpret R (\texttt{install.packages(<menobalíčka>}
 			\item Balíčky neustále pribúdajú: Ak niekto opublikuje novú štatistickú metódu, s veľkou pravdepodobnosťou ju hneď implementuje v R.
 		\end{itemize}
@@ -79,7 +79,7 @@
 	\begin{block}{R je renomované a spoľahlivé}
 		\begin{itemize}
 			\item Pretože R používa veľa ľudí, je dobre otestované a všetky prípadné chyby sú hneď odstránené.
-			\item Ak si svoje dáta analyzujete v R, nikto sa nebude pýtať, či ste správne počítali ANOVu.
+			\item Ak si svoje dáta analyzujete v R, nikto sa nebude pýtať, či ste správne počítali ANOVu (čo neznamená, že sa nebude pýtať, či ste ju správne použili)
 			\item Kód vašej analýzy je univerzálne zrozumiteľný doklad o tom, čo ste robili.
 		\end{itemize}
 	\end{block}
@@ -88,9 +88,12 @@
 \begin{frame}{Nemá chybu...?}
 	\begin{block}{R má svoje špecifiká a slabé stránky}
 		\begin{itemize}
-			\item R sa pôvodne vyvinulo z funkcionálneho a objektovo-orientovaného jazyka S. Preto niektoré veci pracujú trocha odlišne.
+			\item R sa pôvodne vyvinulo z funkcionálneho a objektovo-orientovaného jazyka S. Preto niektoré veci pracujú trocha zvláštne.
 			\item Pretože R má za sebou dlhú históriu, obsahuje niekoľko súperiacich koncepcií a funkčných rozhraní. Preto niektoré veci možno robiť rôznymi spôsobmi, a naopak niektoré podobné veci musíte robiť odlišne.
-			\item R je pomalé. Treba sa vyhýbať zložitým programovým konštrukciám v R (cyklom \texttt{for} a podobne), a používať čo najviac metafunkcie R (\texttt{apply}), aby sa počítanie robilo v C a Fortrane, a nie v R. 
+			\item R je pomalé. To pocitite iba pri veľkých analýzach.
+			\begin{itemize}
+				\item Treba sa vyhýbať zložitým programovým konštrukciám v R (cyklom \texttt{for} a podobne), a používať čo najviac metafunkcie R (\texttt{apply}), aby sa počítanie robilo v C a Fortrane, a nie v R. 
+			\end{itemize}
 			\item Napriek tomuto všetkému sa základy programovania v R možno naučiť pomerne rýchlo a pomerne rýchlo získať výsledky.
 		\end{itemize}
 	\end{block}
