--- a/slides/RTutorial_Uvod.tex
+++ b/slides/RTutorial_Uvod.tex
@@ -21,7 +21,7 @@
 			\item[Open source] software, nepotrebujeme nakupovať drahý štatistický software, ani MS Office, všetko čo potrebujeme sa dá stiahnuť z Internetu.
 			\item[Version control] Chceme, aby sa dáta dali zdieľať a boli chránené pred stratou alebo nechcenou zmenou.
 			\item[Rôzne zdroje dát] Chceme pracovať s dátami z viacerých možných zdrojov - textové súbory, Excel, JSON, databázy atď.
-			\item[Zdieľanie dát a analýzy] Chceme, aby si ľudia mohli skontrolovať našu analýzu.
+			\item[Zdieľanie dát a analýzy] Chceme, aby si ľudia mohli skontrolovať našu analýzu (a my chceme skontrolovať tú ich!)
 		\end{description}
 	\end{block}
 \end{frame}
@@ -77,6 +77,7 @@
 				\item Ale Linux je na to ešte lepší.
 			\end{itemize}
 			\item Nepotrebujete mať extra silný procesor alebo veľa pamäti, aspoň nie pre tento kurz.
+			\item Ani nepotrebujete mať veľa miesta na disku (stačí gigabajt).
 		\end{itemize}
 	\end{block}
 	\begin{block}{Inštalovaný software}
@@ -85,10 +86,8 @@
 			\item Zriaďte si účet na GitHub (\texttt{https://www.github.org}) a stiahnite si \emph{GitHub Desktop}. Ak máte Linux, stačí vám nainštalovať git. 
 			\begin{itemize}
 				\item Toto stačí v priebehu kurzu, svoj GitHub account budete potrebovať na odovzdanie zadaní.
-				\item Ale nezaškodí získať trocha praxe, takže čím skôr, tým lepšie.
 			\end{itemize}
-			\item Návod na inštaláciu R/RStudio a na zriadenie GitHub konta nájdete v GitHub repozitári tohoto kurzu, \texttt{https://www.github.com/PKvasnick/RTutorial/}
-			\item Ak by ste mali problémy s inštaláciou, rýchlo sa ozvite.
+			\item Návod na inštaláciu R/RStudio a na zriadenie GitHub konta nájdete v GitHub repozitári tohoto kurzu, \texttt{https://www.github.com/PKvasnick/RTutorial/}. Ak by ste mali problémy s inštaláciou, rýchlo sa ozvite (peter.kvasnicka\@mff.cuni.cz)
 		\end{itemize}
 	\end{block}
 \end{frame}
