--- a/slides/RTutorial_Uvod.tex
+++ b/slides/RTutorial_Uvod.tex
@@ -80,12 +80,20 @@
 			\item Ani nepotrebujete mať veľa miesta na disku (stačí gigabajt).
 		\end{itemize}
 	\end{block}
-	\begin{block}{Inštalovaný software}
+\end{frame}
+
+% ----------------------------------------------------------------
+\subsection{Software}
+% ----------------------------------------------------------------
+
+\begin{frame}
+	\begin{block}{Nainštalovať software}
 		\begin{itemize}
 			\item Potrebujete mať nainštalované R a RStudio.
 			\item Zriaďte si účet na GitHub (\texttt{https://www.github.org}) a stiahnite si \emph{GitHub Desktop}. Ak máte Linux, stačí vám nainštalovať git. 
 			\begin{itemize}
 				\item Toto stačí v priebehu kurzu, svoj GitHub account budete potrebovať na odovzdanie zadaní.
+				\item Aj keď sa zdá, že to nesúvisí so štatistikou, používanie git-u může byř jedna z najdôležitejších vecí, ktoré sa tu naučíte, preto toto neodkladajte. 
 			\end{itemize}
 			\item Návod na inštaláciu R/RStudio a na zriadenie GitHub konta nájdete v GitHub repozitári tohoto kurzu, \texttt{https://www.github.com/PKvasnick/RTutorial/}. Ak by ste mali problémy s inštaláciou, rýchlo sa ozvite (peter.kvasnicka\@mff.cuni.cz)
 		\end{itemize}
