--- a/slides/RTutorial_Uvod.tex
+++ b/slides/RTutorial_Uvod.tex
@@ -5,7 +5,8 @@
 	\begin{block}{1. Používať R}
 		Trocha neskromné, nemáme veľa času.
 		\begin{description}
-			\item[Načítať dáta] import z textových súborov a Excelu
+			\item[Základy R] aké nástroje používať, základnú syntax, kde hľadať pomoc
+			\item[Načítať dáta] import z textových súborov, Excelu, web stránok
 			\item[Preskúmať dáta] kreslenie - \texttt{ggplot2}
 			\item[Upraviť dáta] manipulácia s dátami, súhrny, filtrovanie atď. - \texttt{tidyverse}
 			\item[Analyzovať dáta] lineárny model, ANOVA atď.
@@ -59,7 +60,7 @@
 	\end{block}
 	\begin{block}{Angličtina}
 		\begin{itemize}
-			\item Je mi ľúto, ale bez angličtiny budete mať v tomto kurze ťažkosti.
+			\item Je mi ľúto, ale bez angličtiny budete mať v tomto kurze vážne ťažkosti.
 			\item Predovšetkým si veľmi ťažko budete hľadať pomoc na Internete, a to je prvá vec, ktorú človek robí, keď mu niečo nefunguje alebo nevie, ako niečo urobiť. 
 		\end{itemize}
 	\end{block}
