--- a/slides/RTutorial.tex
+++ b/slides/RTutorial.tex
@@ -17,7 +17,7 @@
 %\setbeamertemplate{navigation symbols}{} 
 %\logo{} 
 \institute{Univerzita Karlova, Praha} 
-\date{Kurz pre 4. ročník BMF \newline Jeseň 2019} 
+\date{Kurz pre 4. ročník BMF \newline Jeseň 2020} 
 \subject{Statistics and data science} 
 
 \beamertemplatenavigationsymbolsempty
@@ -36,6 +36,7 @@
 \titlepage
 \end{frame}
 
+\clearpage \input{RTutorial_Remote.tex} \clearpage
 \clearpage \input{RTutorial_Uvod.tex} \clearpage
 \clearpage \input{RTutorial_R.tex} \clearpage
 
